--- a/src/styles.css
+++ b/src/styles.css
@@ -48,3 +48,13 @@
   position: fixed;
   right: 25px;
 }
+
+.fab-danger {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 25px;
+  position: fixed;
+  left: 25px;
+  width: 65px;
+  height: 65px;
+}
